# EDM4hep

./: CMakeLists.txt  edm4hep.yaml  index.html
doc/latest/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _calo_hit_contribution_8cc.html  _calo_hit_contribution_8cc__incl.map  _calo_hit_contribution_8cc__incl.md5  _calo_hit_contribution_8h.html  _calo_hit_contribution_8h__dep__incl.map  _calo_hit_contribution_8h__dep__incl.md5  _calo_hit_contribution_8h__incl.map  _calo_hit_contribution_8h__incl.md5  _calo_hit_contribution_8h_source.html  _calo_hit_contribution_collection_8cc.html  _calo_hit_contribution_collection_8cc__incl.map  _calo_hit_contribution_collection_8cc__incl.md5  _calo_hit_contribution_collection_8h.html  _calo_hit_contribution_collection_8h__dep__incl.map  _calo_hit_contribution_collection_8h__dep__incl.md5  _calo_hit_contribution_collection_8h__incl.map  _calo_hit_contribution_collection_8h__incl.md5  _calo_hit_contribution_collection_8h_source.html  _calo_hit_contribution_const_8cc.html  _calo_hit_contribution_const_8cc__incl.map  _calo_hit_contribution_const_8cc__incl.md5  _calo_hit_contribution_const_8h.html  _calo_hit_contribution_const_8h__dep__incl.map  _calo_hit_contribution_const_8h__dep__incl.md5  _calo_hit_contribution_const_8h__incl.map  _calo_hit_contribution_const_8h__incl.md5  _calo_hit_contribution_const_8h_source.html  _calo_hit_contribution_data_8h.html  _calo_hit_contribution_data_8h__dep__incl.map  _calo_hit_contribution_data_8h__dep__incl.md5  _calo_hit_contribution_data_8h__incl.map  _calo_hit_contribution_data_8h__incl.md5  _calo_hit_contribution_data_8h_source.html  _calo_hit_contribution_obj_8cc.html  _calo_hit_contribution_obj_8cc__incl.map  _calo_hit_contribution_obj_8cc__incl.md5  _calo_hit_contribution_obj_8h.html  _calo_hit_contribution_obj_8h__dep__incl.map  (+3066 more)
edm4hep/: CMakeLists.txt  headers.cmake  sources.cmake
edm4hep/edm4hep/: CaloHitContribution.h  CaloHitContributionCollection.h  CaloHitContributionConst.h  CaloHitContributionData.h  CaloHitContributionObj.h  CaloHitContributionSIOBlock.h  CalorimeterHit.h  CalorimeterHitCollection.h  CalorimeterHitConst.h  CalorimeterHitData.h  CalorimeterHitObj.h  CalorimeterHitSIOBlock.h  Cluster.h  ClusterCollection.h  ClusterConst.h  ClusterData.h  ClusterObj.h  ClusterSIOBlock.h  EventHeader.h  EventHeaderCollection.h  EventHeaderConst.h  EventHeaderData.h  EventHeaderObj.h  (+92 more)
plugins/delphes/: CMakeLists.txt  DelphesHepMCReader.h  DelphesInputReader.h  DelphesMain.h  DelphesPythia8Reader.h  DelphesROOT_EDM4HEP.cpp  DelphesRootReader.h
test/: CMakeLists.txt  read_events.h  reco_particle_ref.cc  test_rdf.cc  test_rdf.py  write_events.h
(+212 files in other folders)
